--- a/src/BlogPosts/PostsForm/postsForm.css
+++ b/src/BlogPosts/PostsForm/postsForm.css
@@ -49,7 +49,7 @@
     outline: none;
 }
 
-.postsForm button{
+.postsForm__btn{
     display: block;
     width: 200px;
     border: 3px solid rgb(4, 18, 82);
@@ -62,10 +62,10 @@
     cursor: pointer;
 }
 
-.postsForm button:hover{
+.postsForm__btn:hover{
     background: rgba(4, 18, 82, 0.24);
 }
 
-.postsForm button:focus{
+.postsForm__btn:focus{
     outline: none;
 }
